--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -275,32 +275,7 @@
                 <p>Share your vision with us.</p>
             </div>
 
-            <div class="row" data-aos="fade-up" data-aos-delay="100">
-                <div class="col-lg-6">
-                    <div class="info-box mb-4">
-                        <i class="bx bx-map"></i>
-                        <h3>Our Address</h3>
-                        <p>ul. Zborsko 2b</p>
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="info-box  mb-4">
-                        <i class="bx bx-envelope"></i>
-                        <h3>Email Us</h3>
-                        <p>anovindooel@gmail.com</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="info-box  mb-4">
-                        <i class="bx bx-phone-call"></i>
-                        <h3>Call Us</h3>
-                        <p>+389 74 747 288</p>
-                    </div>
-                </div>
-
-            </div>
 
             <div class="row align-items-center" data-aos="fade-up" data-aos-delay="100">
 
@@ -362,16 +337,14 @@
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <a href="index.html" class="logo">
+                    <a href="/" class="logo">
                         <div style="color:black; margin-bottom: 0rem;!important; font-size: 1.3rem;">ANO<span
                                 style="color:#106eea;">V</span>IN
                         </div>
                     </a>
 
                     <p style="color:black;">
-                        ul. Zborsko br. 2b <br>
-                        Skopje, 1000<br>
-                        Macedonia <br><br>
+
                         <strong>Phone:</strong> +389 74 747 288<br>
                         <strong>Email:</strong> anovindooel@gmail.com<br>
                     </p>
