--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -50,7 +50,7 @@
         <div class="d-flex justify-content-center align-items-center">
 
             {% if request.user.is_authenticated %}
-            <a href="{% url 'my_tutorials' %}" style="cursor: pointer;" class="shadow nav-link link-light  ">Profile</a>
+            <a href="{% url 'my_tutorials' %}" style="cursor: pointer;" class="shadow nav-link link-light">Collections</a>
             <a style="cursor: pointer;" href="{% url 'logout_view' %}" class="shadow nav-link link-light">
                 Logout
             </a>
@@ -74,8 +74,7 @@
 <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
         <a href="{% url 'index' %}" class="logo">
-            <div style="color:black; font-size: 1.6rem; margin-top:5px;">ANO<span
-                    style="color:#263f62;">V</span>IN
+            <div style="color:black; font-size: 1.3rem; margin-top:5px;">ANO<span class="text-primary">V</span>IN
             </div>
         </a>
         <nav id="navbar" class="navbar">
