Changed the design

--- a/web/templates/tutorials.html
+++ b/web/templates/tutorials.html
@@ -85,7 +85,9 @@
         .like-box {
             height: 120px;
         }
-
+        button:hover{
+            filter:invert(100);
+        }
     </style>
 <body class="">
 {% include 'menu.html' %}
