--- a/web/templates/tutorials/my_tutorials.html
+++ b/web/templates/tutorials/my_tutorials.html
@@ -100,7 +100,7 @@
 <div class="container">
     <div class="tag-cloud d-flex align-items-center justify-content-center flex-column w-100 h-auto p-2"
          style="border-radius:10px;">
-        <h1 class="mt-4 mb-3" align="center" style="font-size: 20px;">Search through your tutorials</h1>
+        <h1 class="mt-4 mb-3" align="center" style="font-size: 20px;">Search through your tutorial collection.</h1>
         <div class="w-100" style="margin-bottom:30px;">
             <form method="get" action="{% url 'my_tutorials' %}" class="d-flex  flex-column flex-md-row mb-4">
                 <input id='instantSearch' type="text" class="form-control  w-100 shadow-sm  mt-3 mb-1 mb-md-0"
